<resources>
    <string name="app_name">PaseAndo</string>
    <string name="title_activity_navigation_paseando">NavigationPaseando</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_ingresar">Ingresar</string>
    <string name="login_registro">Regístrate</string>
    <string name="nav_pas_pedirpaseo">Nuevo Paseo</string>

    <string name="correo_electronio">Correo electrónico</string>
    <string name="acerca_de">Acerca de</string>
    <string name="acerca_de_paseando">Acerca de PaseAndo</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="direccion">Dirección</string>
    <string name="nombre_de_la_mascota">Nombre de la mascota</string>
    <string name="edad_de_la_mascota">Edad de la Mascota</string>
    <string name="convierte_paseador">Conviertete en Paseador</string>
    <string name="registrar">Registrar</string>
    <string name="contrasenia">Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="ubicacion">Ubicación</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="cancelar">Cancelar</string>
    <string name="nada"> </string>
    <string name="paseando">PaseAndo</string>
    <string name="salir">Cerrar sesión</string>


    <string name="no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="si_tienes_cuenta">¿Ya tienes una cuenta?</string>
    <string name="ingresar">Ingresar</string>
    <string name="ayuda">Ayuda</string>
    <string name="seguro_cerrar_se">¿Estas seguro de cerrar sesión?</string>
    <string name="altitud_longitud">Altitud:      Longitud:</string>
    <string name="vacios">------------ ------------</string>
    <string name="altitud_longitud1">Altitud: \\nlongitud:</string>
    <string name="correoapp">paseando@paseando.com</string>
    <string name="mis_paseos">Mis paseos</string>
    <string name="paseos">Paseos</string>
    <string name="mayor_que"><![CDATA[>]]></string>
    <string name="title_activity_pedir_paseo_mapa">Map</string>
    <string name="otra_ubic">Otra ubicación</string>
    <string name="nuevo_hospedaje">Nuevo Hospedaje</string>
    <string name="debes_descargar_la_aplicacion">Debes descargar la aplicación PaseAndo Paseador</string>
    <string name="mascotas">Mascotas</string>
    <string name="en_construcion">En Construcción</string>
    <string name="informacion_mascota">informacion de la mascota</string>
    <string name="mision">Misión</string>
    <string name="texto_mision">Somos una empresa centrada en el cuidado de perros, siendo el vínculo entre el paseador y el dueño, ayudándolo a administrar su tiempo y no descuidar el bienestar de su mascota.</string>
    <string name="vision">Visión</string>
    <string name="texto_vision">Ser la empresa líder dentro del mercado en los próximos 5 años dándole la mejor atención tanto al usuario como a sus perros.</string>
    <string name="objetivo">Objetivo</string>
    <string name="texto_objetivo">Crear puestos de trabajo para personas interesadas en el cuidado de perros para brindarles una buena capacitación y así, dar un buen trato a las mascotas.</string>
    <string name="precio">Precio</string>
    <string-array name="selecciona_tiempo">
        <item>Selecciona el tiempo</item>
        <item>30 min</item>
        <item>1 hr</item>
        <item>2 hr</item>
        <item>Proximas...</item>
    </string-array>
    <string name="costo">Costo: </string>
    <string name="precio1">25$</string>
    <string name="precio2">40$</string>
    <string name="precio3">60$</string>
    <string name="proximo">Esperalo...</string>
    <string name="datos_perro">Datos del perro</string>
    <string name="continuar">Continuar</string>
    <string name="finalizar">Finalizar</string>
    <string name="edad">Edad</string>
    <string name="tamanio">Tamaño</string>
    <string name="raza">Raza</string>
    <string name="cuidados">Cuidados</string>
    <string name="nuevo_paseo">Nuevo paseo</string>
    <string name="aceptar_politicas">Leí el aviso de privacidad y estoy de acuerdo</string>
    <string name="preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="texto_aviso">¿Cómo puedo volverme paseador ? \nDescarga nuestra aplicación PaseAndo paseador y solo regístrate. \n ¿Cómo son los paseos? \nLos paseos son caminando, ya que consideramos que es la mejor forma de alegrar el día, ejercitando y sociabilizando.  \n¿Cuál es el costo de los paseos? \nEs de 25 pesos por 30 min, 40 por un hora, 60 por dos horas. \n¿Cuál es la forma de pago? \nPor ahora solo contamos con método en efectivo.   \n¿Qué NO debo hacer si mi perro es agresivo?\n •\tProvocar la agresividad. •\tEsperar que se arregle solo. •\tLiderar erróneamente la manada. •\tImponerse sobre el perro. •\tGolpearle o castigarle. •\tReforzar la agresividad. •\tOlvidar que el perro puede suponer un riesgo. \nEstos puntos pueden reforzar esa conducta agresiva. · \n¿Qué SÍ debo hacer si mi perro es agresivo?\n •\tSeguridad ante todo. •\tEvitar las situaciones agresivas. •\tGánatelo todo, amigo. •\tUniformizar la relación con el perro. •\tRutina de actividades. •\tObediencia en positivo.</string>
    <string name="Restablecer_contraseña">Restablecer contraseña</string>
    <string name="title_activity_prueba_mapa">Map</string>
    <string name="Seguimiento">Seguimiento</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Detalles">Detalles</string>
    <string name="Mapa">Mapa</string>


</resources>
