<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/perfil" />

        <item
            android:id="@+id/nav_haz_paseador"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/hazte_paseador" />


        <item
            android:id="@+id/nav_mis_paseos"
            android:icon="@drawable/ic_acerca"
            android:title="@string/mis_paseos" />


        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_acerca"
                android:icon="@drawable/ic_acerca"
                android:title="@string/acerca_de" />

            <item
                android:id="@+id/nav_cerrar_se"
                android:icon="@drawable/ic_cerrar"
                android:title="@string/cerrar"/>

        </menu>
    </item>

</menu>
