<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/huellas_fondo">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"

        >


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
        android:text="@string/mision"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_mision"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vision"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_vision"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/objetivo"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_objetivo"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>