<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/huellas_fondo">

    <ImageView
        android:id="@+id/imgUsuario"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/usuario" />

    <TextView
        android:id="@+id/txtCorreoP"
        android:layout_width="290dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/correo_electronio"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUsuario" />

    <TextView
        android:id="@+id/txtNombreUsu"
        android:layout_width="269dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/nombre_de_usuario"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoP" />

    <TextView
        android:id="@+id/txtDireccionP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/direccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreUsu" />

    <ImageView
        android:id="@+id/imgMascota"
        android:layout_width="114dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDireccionP"
        app:srcCompat="@mipmap/perro" />

    <TextView
        android:id="@+id/txtNombreMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nombre_de_la_mascota"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMascota" />

    <TextView
        android:id="@+id/txtEdadMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/edad_de_la_mascota"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreMascota" />

    <TextView
        android:id="@+id/txtCuidados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:gravity="center"
        android:text="@string/cuidados"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEdadMascota" />



    <TextView
        android:id="@+id/txtPrb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="TextView"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDireccionP" />


</androidx.constraintlayout.widget.ConstraintLayout>