<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hospedaje">

    <TextView
        android:id="@+id/tv_construccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/en_construcion"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="132dp"
        android:layout_height="145dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_construccion"
        app:srcCompat="@mipmap/barricade"
        android:contentDescription="@string/app_name"/>


    <Button
        android:id="@+id/btnAceptarConstruccion"
        android:layout_width="137dp"
        android:layout_height="45dp"

        android:layout_marginTop="60dp"
        android:background="@drawable/boton_solido"
        android:onClick="ctrlBtnAceptarC"
        android:text="@string/aceptar"
        android:textColor="@color/colorPrimary2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


</androidx.constraintlayout.widget.ConstraintLayout>