<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF196AB6">

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/boton_solido2"
        android:onClick="cerrarApp"
        android:text="@string/cerrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/boton_solido2"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgPerroT"
        android:layout_width="188dp"
        android:layout_height="166dp"
        android:layout_marginTop="268dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/perro_triste" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="322dp"
        android:layout_height="85dp"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:text="@string/seguro_cerrar_se"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>