<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PedirPaseo"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:background="@drawable/boton_solido"/>

    <ImageView
        android:id="@+id/imgMascota"
        android:layout_width="137dp"
        android:layout_height="116dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/perro" />

    <TextView
        android:id="@+id/txtNombreMascota"
        android:layout_width="181dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="@string/nombre_de_la_mascota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMascota"
        android:background="@drawable/edit_text"/>

    <Button
        android:id="@+id/btnAccUbica"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:text="@string/ubicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreMascota"
        android:background="@drawable/boton_solido"/>

    <TextView
        android:id="@+id/txtUbicacion"
        android:layout_width="107dp"
        android:layout_height="34dp"
        android:layout_marginTop="30dp"
        android:hint="@string/ubicacion"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAccUbica" />


</androidx.constraintlayout.widget.ConstraintLayout >
