<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroPerro">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="193dp"
                android:layout_height="158dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toTopOf="@+id/txtCorreoP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@mipmap/ic_launcherpaseando_round" />

            <TextView
                android:id="@+id/tv_datosPerro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/datos_perro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_NombrePerro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/nombre_de_la_mascota"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_datosPerro" />

            <EditText
                android:id="@+id/et_raza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/raza"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_NombrePerro" />

            <Spinner
                android:id="@+id/spinnerEdad"
                android:layout_width="213dp"
                android:layout_height="41dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_raza" />



            <EditText
                android:id="@+id/et_cuidados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/cuidados"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/btnRegistro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerEdad"
                app:layout_constraintVertical_bias="1.0" />

            <Spinner
                android:id="@+id/spinnerTam"
                android:layout_width="213dp"
                android:layout_height="41dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_cuidados" />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="143dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginStart="150dp"
                android:layout_marginEnd="150dp"

                android:background="@drawable/boton_solido"
                android:onClick="ctrlBtnRegistroPerro"
                android:text="@string/finalizar"
                android:textColor="@color/colorPrimary2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerTam"

                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"/>






        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>